--- a/css/clock2.css
+++ b/css/clock2.css
@@ -7,7 +7,7 @@
 
 .clock {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   margin-top: 35vh;
   width: 60%;
@@ -26,7 +26,7 @@
 .clock .hours,
 .clock .minutes,
 .clock .seconds {
-  background-color: rgb(192, 172, 172);
+  background-color: rgb(206, 206, 206);
   position: relative;
   font-size: 10em;
 }
